fix achieves display

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
             </div>
             <div class="menu__block">
                 <div class="achieves">
-                    <div class="achieve" v-if="quest1.achieve" title="На пямять от Эйлома Шаска"></div>
-                    <div class="achieve" v-if="quest5.achieve"></div>
-                    <div class="achieve" v-if="quest9.achieve"></div>
-                    <div class="achieve" v-if="quest10.achieve"></div>
-                    <div class="achieve" v-if="quest13.achieve"></div>
+                    <div class="achieve achieve--quest1" v-if="quest1.achieve" title="На пямять от Эйлома Шаска"></div>
+                    <div class="achieve achieve--quest5" v-if="quest5.achieve"></div>
+                    <div class="achieve achieve--quest9" v-if="quest9.achieve"></div>
+                    <div class="achieve achieve--quest10" v-if="quest10.achieve"></div>
+                    <div class="achieve achieve--quest13" v-if="quest13.achieve"></div>
                     <!-- <div class="achieve" v-if="quest6.achieve"></div> -->
                     <!-- <div class="achieve" v-if="quest7.achieve"></div> -->
                     <!-- <div class="achieve" v-if="quest8.achieve"></div> -->
