--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <input type="number" class="step" v-model="step" min="0">
             </div>
             <div class="menu__block">
-                <button class="step-btn" @click="addStep" :disabled="startFly != endFly">Go</button>
+                <button class="step-btn" @click="addStep" :disabled="startFly > endFly">Go</button>
             </div>
         </div>
         <div class="fild">
