fix quest10 text

--- a/index.html
+++ b/index.html
@@ -996,7 +996,7 @@
                                     <p>Как проходит полет?</p>
                                     <p>Не окажешь мне услугу? Будь добр, зацени мою <a target="_blank"
                                             v-on:click="quest10.achieve = true;"
-                                            href="https://vgaimanovskyi.github.io/47-Exam/index.html">постелнюю
+                                            href="https://vgaimanovskyi.github.io/47-Exam/index.html">последнюю
                                             работу.</a></p>
                                     <p>Тебе не тяжело, а мне приятно.</p>
                                     <p>Хорошего пути!</p>
