--- a/pages/about.html
+++ b/pages/about.html
@@ -37,7 +37,7 @@
                 <div class="article">
                     <h2 class="article__caption">Управление</h2>
                     <div class="article__text">
-                        <div>
+                        <div class="article__control">
                             <img src="../images/about/ava.jpg" alt="аватар">
                             <img src="../images/about/plane.jpg" alt="корабль">
                             <p>
@@ -48,7 +48,7 @@
                         </div>
                     </div>
                     <div class="article__text">
-                        <div>
+                        <div class="article__control">
                             <img src="../images/about/lives.jpg" alt="жизни">
                             <p>
                                 Это "жизни" Вашего космического корабля. В начале игры из 3. По ходу игры количество
@@ -59,7 +59,7 @@
                         </div>
                     </div>
                     <div class="article__text">
-                        <div>
+                        <div class="article__control">
                             <img src="../images/about/nav.jpg" alt="навигация">
                             <p>
                                 Это блок навигации. Показывает на какой позиции (клекте) Вы сейчас находитесь и какое
@@ -69,7 +69,7 @@
                         </div>
                     </div>
                     <div class="article__text">
-                        <div>
+                        <div class="article__control">
                             <img src="../images/about/achieves.jpg" alt="достижения">
                             <p>
                                 Это блок с достижениями (наградами / ачивками). Их можно заработать при успешном
@@ -79,7 +79,7 @@
                         </div>
                     </div>
                     <div class="article__text">
-                        <div>
+                        <div class="article__control">
                             <img src="../images/about/steps.jpg" alt="ходы">
                             <p>
                                 Это Ваш ход. То, на сколько ходов вперед продвинется Ваш корабль. Это число генерируется
@@ -90,7 +90,7 @@
                         </div>
                     </div>
                     <div class="article__text">
-                        <div>
+                        <div class="article__control">
                             <img src="../images/about/go.jpg" alt="кнопка">
                             <p>
                                 Это кнопка "GO". Чтобы начать ход / походить нужно ее нажать. Она генерирует Ваш ход
@@ -126,6 +126,15 @@
                             Отдельно хочу поблагодарить Максима Бондарука, Женю Туз и Алену Левченко. Вы классные
                             специалисты. Спасибо, что делитесь своим богатым опытом и знаниями.
                         </p>
+                        <div class="article__map">
+                            <div class="map" id="map"></div>
+                            <ul class="infowindow">
+                                <li class="infowindow__block">г.Чернигов, ул. Преображенская, 12</li>
+                                <li class="infowindow__block">+380635422942</li>
+                                <li class="infowindow__block">zhenia.tuz@beetroot.academy</li>
+                                <li class="infowindow__block">пн - пт: 09:00 - 19:00</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -134,6 +143,9 @@
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
     <script src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js" type="text/javascript"></script>
     <script src="../js/carousel.js"></script>
+    <script src="../js/map.js"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?&callback=initMap"></script>
+
 </body>
 
 </html>
