--- a/pages/about.html
+++ b/pages/about.html
@@ -26,11 +26,11 @@
                                 рейнджеры</a>. Текстуры некоторых персонажей и кораблей были взяты из интернета.
                         </p>
                         <p>
-                            Часть вопросов по текстовым квестам была взята из открытых обучающих кроектов <a
+                            Часть вопросов по текстовым квестам была взята из открытых обучающих проектов <a
                                 href="https://www.efset.org/ru">EFSET</a>, <a
                                 href="https://www.cambridgeenglish.org">Cambridge Assessment English</a> и <a
-                                href="https://ru.hexlet.io/courses">Hexlet</a>. Рукомендую данные ресурсы для обучения
-                            английскому языку, а так же различных направлений в IT.</p>
+                                href="https://ru.hexlet.io/courses">Hexlet</a>. Рекомендую данные ресурсы для обучения
+                            английскому языку, а также различных направлений в IT.</p>
                     </div>
                 </div>
                 <div class="article">
@@ -52,7 +52,7 @@
                             <p>
                                 Это "жизни" Вашего космического корабля. В начале игры из 3. По ходу игры количество
                                 "жизней" может меняться. "Жизни" отнимаются в результате отказа от выполнения квестов и
-                                при попадании на определенные клетки. Когда все "жизни" будут потрачены, то игра
+                                при попадании на определенные секции. Когда все "жизни" будут потрачены, то игра
                                 закончится преждевременно. Пополняются "жизни" за успешное выполнение квестов.
                             </p>
                         </div>
@@ -61,9 +61,9 @@
                         <div class="article__control">
                             <img src="../images/about/nav.jpg" alt="навигация">
                             <p>
-                                Это блок навигации. Показывает на какой позиции (клекте) Вы сейчас находитесь и какое
-                                количество ходов было сделано (сколь раз нажали кнопку "Go"). Особой смысловой нагрузки
-                                в себе не несет.
+                                Это блок навигации. Показывает на какой позиции (секции) Вы сейчас находитесь и какое
+                                количество ходов было сделано (сколько раз нажали кнопку "Go"). Особой смысловой
+                                нагрузки в себе не несет.
                             </p>
                         </div>
                     </div>
@@ -82,9 +82,9 @@
                             <img src="../images/about/steps.jpg" alt="ходы">
                             <p>
                                 Это Ваш ход. То, на сколько ходов вперед продвинется Ваш корабль. Это число генерируется
-                                случайно от 1 до 3. Для генерации хода необходимо нажать на кнопку "Go". При попадании
-                                на некоторые клетки с заданиями, Ваш корабль может самостоятельно передвинутся на
-                                несколько клетов вперед или назад.
+                                случайно от 1 до 3. Для генерации хода необходимо нажать на кнопку "GO". При попадании
+                                на некоторые секции с заданиями, Ваш корабль может самостоятельно передвинуться на
+                                несколько секций вперед или назад.
                             </p>
                         </div>
                     </div>
@@ -94,7 +94,7 @@
                             <p>
                                 Это кнопка "GO". Чтобы начать ход / походить нужно ее нажать. Она генерирует Ваш ход
                                 (число от 1 до 3), который отображается в соседней панели. Кнопку можно нажимать
-                                тогда, когда закончился Ваш предыдущий ход. Иначе, кнопка не сработает.
+                                тогда, когда закончился Ваш предыдущий ход. Иначе кнопка не сработает.
                             </p>
                         </div>
                     </div>
@@ -103,7 +103,7 @@
                     <h2 class="article__caption">Квесты</h2>
                     <div class="article__text">
                         <p>
-                            Квесты есть на всех станциях и на некоторых планетух. Квест - это тестовое задание на темы
+                            Квесты есть на всех станциях и на некоторых планетах. Квест - это тестовое задание на темы
                             HTML, CSS, JavaScript и базовые знания английского языка.
                         </p>
                         <p>
