--- a/pages/ie.html
+++ b/pages/ie.html
@@ -14,16 +14,16 @@
             <div class="panel__alert">внимание!</div>
             <p>
                 Сразу после взлета Ваш космический корабль потерпел крушение. К счастью никто не пострадал. Экипаж
-                отделался легким испугом. Пару бокалов бурякового фреша востановят Ваши силы и нервы.
+                отделался легким испугом. Пару бокалов свекольного фреша востановят Ваши силы и нервы.
             </p>
             <p>
-                В поисках неисправности наши инжинеры провели тчательную диагностику всего корабля. И им удалось найти
+                В поисках неисправности наши инженеры провели тщательную диагностику всего корабля. И им удалось найти
                 причину поломки! Результатом сбоя стало очень устаревшее программное обеспечение - это <span
                     class="important">Internet Explorer</span>.
             </p>
             <p>
                 Мы не сразу поверили, что такое возможно, что кто-то вообще еще его использует. Но после нескольких
-                повторных тестов результат был таким же. Причина несиправности - это <span class="important">Internet
+                повторных тестов результат был таким же. Причина неисправности - это <span class="important">Internet
                     Explorer</span>.
             </p>
             <p>
