--- a/pages/mobile.html
+++ b/pages/mobile.html
@@ -13,7 +13,7 @@
         <div class="mobile-panel">
             <div class="panel__alert">внимание!</div>
             <p>
-                Разрешение вашего экрана должно быть <span class="important">не меньше 480px.</span>
+                Разрешение Вашего экрана должно быть <span class="important">не меньше 480px.</span>
             </p>
         </div>
     </div>
