--- a/pages/about.html
+++ b/pages/about.html
@@ -14,7 +14,7 @@
         <div class="main">
             <div class="main-carousel">
                 <div class="article">
-                    <h2 class="article__caption">Об проекте</h2>
+                    <h2 class="article__caption">О проекте</h2>
                     <div class="article__text">
                         <p>
                             Данный проект реализован в образовательных целях. Это выпускная работа в рамках курса
